--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,11 @@
-/* RESET / LAYOUT */
+html, body {
+margin: 0;
+padding: 0;
+background: #D2691E;
+color: white;
+font-size: 18px;
+text-align: center;
+}/* RESET / LAYOUT */
 body, html {
 margin: 0;
 padding: 0;
